qr-code/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qrcode
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qrcode
  template:
    metadata:
      labels:
        app: qrcode
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: qrcode
          image: giandonatoinverso/php-dynamic-qr-code:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data-volume
              mountPath: /var/www/html/saved_qrcode
              readOnly: false
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: qrcode-data-pvc
