qr-code/service.yml
apiVersion: v1
kind: Service
metadata:
  name: qrcode-service
spec:
  selector:
    app: qrcode
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
